--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0-alpha.17",
     "style-loader": "^2.0.0",
     "webpack": "^5.10.1"
   }
