--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "build:dev": "webpack --config config/webpack.dev.js",
     "build:prod": "webpack --config config/webpack.prod.js",
     "build:ssr": "webpack --config config/webpack.ssr.js",
+    "build:dll":"webpack --config config/webpack.dll.js",
     "watch": "webpack --watch",
     "server": "webpack server",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "analyze:stats": "webpack --config config/webpack.prod.js --json stats.json",
+    "proview": "http-server ./dist"
   },
   "lint-staged": {
     "*.{js}": [
@@ -38,16 +41,22 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.7",
+    "html-minimizer-webpack-plugin": "^3.1.1",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.2.0",
+    "node-notifier": "^10.0.0",
     "postcss-loader": "^6.1.1",
     "px2rem-loader": "^0.1.9",
     "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.1.4",
+    "thread-loader": "^3.0.4",
     "webpack": "^5.49.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-dev-server": "^3.11.2",
